# python_poetry_training

./: pyproject.toml
