[tool.poetry]
name = "first-poetry-proj"
version = "0.1.0"
description = "This is my 1st Python project"
authors = ["vrindger <vrindger@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
click = "^8.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
black = "^24.4.2"
flake8 = "^7.0.0"
pre-commit = "^3.7.1"
tox = "^4.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
